feat: integrated the openapi helpers lib (#314)
* feat: integrated the openapi helpers lib

* style: prettier

* build: fixed package lock

* build: upgraded typescript

* test: changed to swc from ts-jest

* test: removed ts-jest preset

* build: added ts-jest for mapper function

* docs: added info on types generation
